--- a/2DPlatformer/2DPlatformer.vcxproj
+++ b/2DPlatformer/2DPlatformer.vcxproj
@@ -18,6 +18,8 @@
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColorShader.h" />
     <ClInclude Include="Direct3D.h" />
+    <ClInclude Include="Explosion.h" />
+    <ClInclude Include="ExplosionManager.h" />
     <ClInclude Include="Fighter.h" />
     <ClInclude Include="FighterFlame.h" />
     <ClInclude Include="Game.h" />
@@ -44,6 +46,8 @@
     <ClCompile Include="Collider.cpp" />
     <ClCompile Include="ColorShader.cpp" />
     <ClCompile Include="Direct3D.cpp" />
+    <ClCompile Include="Explosion.cpp" />
+    <ClCompile Include="ExplosionManager.cpp" />
     <ClCompile Include="Fighter.cpp" />
     <ClCompile Include="FighterFlame.cpp" />
     <ClCompile Include="Game.cpp" />
